esp32/boards: Fix tinyusb check in cmake file, add USB_ENABLED param.
Signed-off-by: Braden Mars <bradenmars@bradenmars.me>

--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -121,6 +121,10 @@ set(IDF_COMPONENTS
     xtensa
 )
 
+if(NOT USB_ENABLED)
+    set(USB_ENABLED 1)
+endif()
+
 if(IDF_VERSION_MINOR GREATER_EQUAL 1 OR IDF_VERSION_MAJOR GREATER_EQUAL 5)
     list(APPEND IDF_COMPONENTS esp_netif)
 endif()
@@ -143,7 +147,7 @@ elseif(IDF_TARGET STREQUAL "esp32c3")
     list(APPEND IDF_COMPONENTS riscv)
 elseif(IDF_TARGET STREQUAL "esp32s2")
     list(APPEND IDF_COMPONENTS esp32s2)
-    if(USB_ENABLED)
+    if(USB_ENABLED GREATER_EQUAL 1)
         list(APPEND IDF_COMPONENTS tinyusb)
     endif()
 elseif(IDF_TARGET STREQUAL "esp32s3")
