--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -152,6 +152,8 @@ SRC_C = \
 	lib/utils/pyexec.c \
 	lib/utils/stdout_helpers.c \
 	lib/utils/sys_stdio_mphal.c \
+	drivers/bus/softspi.c \
+	extmod/modonewire.c \
 	$(SRC_TINYUSB_C) \
 	$(SRC_TINYUSB_IMX_C) \
 
@@ -265,6 +267,7 @@ SRC_QSTR += \
 	moduos.c \
 	pin.c \
 	lib/utils/sys_stdio_mphal.c \
+	extmod/modonewire.c \
 	$(GEN_PINS_SRC) \
 
 OBJ += $(PY_O)
