mimxrt: Added command for pin config generation.

--- a/ports/mimxrt/CMakeLists.txt
+++ b/ports/mimxrt/CMakeLists.txt
@@ -7,11 +7,7 @@ set(CMAKE_EXECUTABLE_SUFFIX .elf)
 # Set main target and component locations
 set(MICROPY_TARGET firmware)
 get_filename_component(MICROPY_DIR "../.." ABSOLUTE)
-if (MIMXRT_SDK_PATH_OVERRIDE)
-    set(MIMXRT_SDK_PATH ${MIMXRT_SDK_PATH_OVERRIDE})
-else()
-    set(MIMXRT_SDK_PATH ${MICROPY_DIR}/lib/nxp_driver/sdk/devices)
-endif()
+
 
 # Set the location of this port's directory.
 set(MICROPY_PORT_DIR ${CMAKE_SOURCE_DIR})
@@ -25,6 +21,8 @@ endif()
 if(NOT MICROPY_BOARD_DIR)
     set(MICROPY_BOARD_DIR ${MICROPY_PORT_DIR}/boards/${MICROPY_BOARD})
 endif()
+
+# Test if board directory is valid
 if(NOT EXISTS ${MICROPY_BOARD_DIR}/mpconfigboard.cmake)
     message(FATAL_ERROR "Invalid MICROPY_BOARD specified: ${MICROPY_BOARD}")
 endif()
@@ -32,35 +30,39 @@ endif()
 # Include board config
 include(${MICROPY_BOARD_DIR}/mpconfigboard.cmake)
 
+# Configure SDK path
+if (MIMXRT_SDK_PATH_OVERRIDE)
+    set(MIMXRT_SDK_PATH ${MIMXRT_SDK_PATH_OVERRIDE})
+else()
+    set(MIMXRT_SDK_PATH ${MICROPY_DIR}/lib/nxp_driver/sdk/devices/${MCU_SERIES})
+endif()
+
 # Include component cmake fragments
 include(${MICROPY_DIR}/py/py.cmake)
 include(${MICROPY_DIR}/extmod/extmod.cmake)
+include(${MICROPY_DIR}/py/usermod.cmake)
+
+
+# Set pin configuration defines
+set(MAKE_PINS ${MICROPY_PORT_DIR}/boards/make-pins.py)
+set(BOARD_PINS ${MICROPY_BOARD_DIR}/pins.csv)
+set(MCU_AF_FILE ${MICROPY_PORT_DIR}/boards/${MCU_SERIES}_af.csv)
+set(PREFIX_FILE ${MICROPY_PORT_DIR}/boards/mimxrt_prefix.c)
+
+set(GEN_PINS_HDR ${CMAKE_BINARY_DIR}/genhdr/pins.h)
+set(GEN_PINS_SRC ${CMAKE_BINARY_DIR}/pins_gen.c)
+
 
 # Define the top-level project
 project(${MICROPY_TARGET})
-
-include(${MICROPY_DIR}/py/usermod.cmake)
-
 add_executable(${MICROPY_TARGET})
 
+
 set(MICROPY_QSTRDEFS_PORT
-    ${PROJECT_SOURCE_DIR}/qstrdefsport.h
+    ${MICROPY_PORT_DIR}/qstrdefsport.h
 )
 
-set(MICROPY_SOURCE_LIB
-    ${MICROPY_DIR}/lib/mp-readline/readline.c
-    ${MICROPY_DIR}/lib/libc/string0.c
-    ${MICROPY_DIR}/lib/utils/gchelper_m3.s
-    ${MICROPY_DIR}/lib/utils/gchelper_native.c
-    ${MICROPY_DIR}/lib/utils/printf.c
-    ${MICROPY_DIR}/lib/utils/pyexec.c
-    ${MICROPY_DIR}/lib/utils/stdout_helpers.c
-)
-
-set(MICROPY_SOURCE_DRIVERS
-
-)
-
+# Define source files
 set(TINY_USB_SOURCE
     ${MICROPY_DIR}/lib/tinyusb/src/tusb.c
     ${MICROPY_DIR}/lib/tinyusb/src/common/tusb_fifo.c
@@ -76,28 +78,44 @@ set(TINY_USB_SOURCE
     ${MICROPY_DIR}/lib/tinyusb/src/portable/nxp/transdimension/dcd_transdimension.c
 )
 
-set(MICROPY_SOURCE_PORT
-    board_init.c
-    led.c
-    machine_led.c
-    main.c
-    modmachine.c
-    modutime.c
-    mphalport.c
-    pin.c
-    tusb_port.c
-    ${MICROPY_BOARD_DIR}/flash_config.c
-    ${MICROPY_BOARD_DIR}/pins.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/gcc/startup_${MCU_SERIES}.S
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/system_${MCU_SERIES}.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/xip/fsl_flexspi_nor_boot.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/project_template/clock_config.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/drivers/fsl_clock.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/drivers/fsl_gpio.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/drivers/fsl_common.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/drivers/fsl_lpuart.c
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/drivers/fsl_flexram.c
+set(MICROPY_SOURCE_LIB
+    ${MICROPY_DIR}/lib/mp-readline/readline.c
+    ${MICROPY_DIR}/lib/libc/string0.c
+    ${MICROPY_DIR}/lib/utils/gchelper_m3.s
+    ${MICROPY_DIR}/lib/utils/gchelper_native.c
+    ${MICROPY_DIR}/lib/utils/printf.c
+    ${MICROPY_DIR}/lib/utils/pyexec.c
+    ${MICROPY_DIR}/lib/utils/stdout_helpers.c
+)
+
+set(MICROPY_SOURCE_DRIVERS
+    ${MIMXRT_SDK_PATH}/gcc/startup_${MCU_SERIES}.S
+    ${MIMXRT_SDK_PATH}/system_${MCU_SERIES}.c
+    ${MIMXRT_SDK_PATH}/xip/fsl_flexspi_nor_boot.c
+    ${MIMXRT_SDK_PATH}/project_template/clock_config.c
+    ${MIMXRT_SDK_PATH}/drivers/fsl_clock.c
+    ${MIMXRT_SDK_PATH}/drivers/fsl_gpio.c
+    ${MIMXRT_SDK_PATH}/drivers/fsl_common.c
+    ${MIMXRT_SDK_PATH}/drivers/fsl_lpuart.c
+    ${MIMXRT_SDK_PATH}/drivers/fsl_flexram.c
+    ${MIMXRT_SDK_PATH}/drivers/fsl_gpt.c
     ${TINY_USB_SOURCE}
+)
+
+set(MICROPY_SOURCE_PORT
+    ${MICROPY_PORT_DIR}/main.c
+    ${MICROPY_PORT_DIR}/board_init.c
+    ${MICROPY_PORT_DIR}/led.c
+    ${MICROPY_PORT_DIR}/machine_led.c
+    ${GEN_PINS_SRC}
+    ${MICROPY_PORT_DIR}/pin.c
+    ${MICROPY_PORT_DIR}/machine_pin.c
+    ${MICROPY_PORT_DIR}/ticks.c
+    ${MICROPY_PORT_DIR}/modmachine.c
+    ${MICROPY_PORT_DIR}/modutime.c
+    ${MICROPY_PORT_DIR}/mphalport.c
+    ${MICROPY_PORT_DIR}/tusb_port.c
+    ${MICROPY_BOARD_DIR}/flash_config.c
 )
 
 set(MICROPY_SOURCE_QSTR
@@ -105,25 +123,15 @@ set(MICROPY_SOURCE_QSTR
     ${MICROPY_SOURCE_EXTMOD}
     ${MICROPY_SOURCE_LIB}
     ${MICROPY_SOURCE_USERMOD}
-    ${MICROPY_PORT_DIR}/board_init.c
-    ${MICROPY_PORT_DIR}/led.c
-    ${MICROPY_PORT_DIR}/machine_led.c
-    ${MICROPY_PORT_DIR}/main.c
-    ${MICROPY_PORT_DIR}/modmachine.c
-    ${MICROPY_PORT_DIR}/modutime.c
-    ${MICROPY_PORT_DIR}/mphalport.c
-    ${MICROPY_PORT_DIR}/pin.c
-    ${MICROPY_PORT_DIR}/tusb_port.c
-    ${MICROPY_BOARD_DIR}/flash_config.c
-    ${MICROPY_BOARD_DIR}/pins.c
+    ${MICROPY_SOURCE_PORT}
+    ${GEN_PINS_HDR}
 )
 
 # Define mpy-cross flags and frozen manifest
 set(MICROPY_CROSS_FLAGS -march=armv7-m)
-#set(MICROPY_FROZEN_MANIFEST ${PROJECT_SOURCE_DIR}/boards/manifest.py)
+#set(MICROPY_FROZEN_MANIFEST ${MICROPY_PORT_DIR}/boards/manifest.py)
 
 target_link_libraries(${MICROPY_TARGET} micropy_extmod_btree)
-
 target_link_libraries(${MICROPY_TARGET} usermod)
 target_link_libraries(${MICROPY_TARGET} -lgcc)
 
@@ -138,16 +146,17 @@ target_sources(${MICROPY_TARGET} PRIVATE
 target_include_directories(${MICROPY_TARGET} PRIVATE
     ${MICROPY_INC_CORE}
     ${MICROPY_INC_USERMOD}
+    ${MICROPY_PORT_DIR}
     ${MICROPY_BOARD_DIR}
     ${MICROPY_DIR}/lib/cmsis/inc
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/drivers
-    ${MIMXRT_SDK_PATH}/${MCU_SERIES}/project_template
+    ${MIMXRT_SDK_PATH}
+    ${MIMXRT_SDK_PATH}/drivers
+    ${MIMXRT_SDK_PATH}/project_template
     ${MICROPY_DIR}/lib/tinyusb/src
     ${MICROPY_DIR}/lib/tinyusb/hw
     ${MICROPY_DIR}/lib/tinyusb/hw/bsp/teensy_40
-    "${PROJECT_SOURCE_DIR}"
-    "${CMAKE_BINARY_DIR}"
+    ${CMAKE_BINARY_DIR}
+    ${CMAKE_BINARY_DIR}/genhdr
 )
 
 target_compile_options(${MICROPY_TARGET} PRIVATE
@@ -164,7 +173,7 @@ target_compile_options(${MICROPY_TARGET} PRIVATE
 
 target_link_options(${MICROPY_TARGET} PRIVATE
     -T${MICROPY_PORT_DIR}/boards/${MCU_SERIES}.ld
-    -T${MIMXRT_SDK_PATH}/${MCU_SERIES}/gcc/${MCU_SERIES}xxxxx_flexspi_nor.ld
+    -T${MIMXRT_SDK_PATH}/gcc/${MCU_SERIES}xxxxx_flexspi_nor.ld
     -mcpu=cortex-m7
     -mtune=cortex-m7
     -mfloat-abi=hard
@@ -210,5 +219,16 @@ add_custom_command(TARGET ${MICROPY_TARGET}
 generate_hex_output(${MICROPY_TARGET})
 generate_bin_output(${MICROPY_TARGET})
 
+
 # Include the main MicroPython cmake rules.
 include(${MICROPY_DIR}/py/mkrules.cmake)
+
+# Custom command for pin files generation
+add_custom_command(
+    OUTPUT  ${GEN_PINS_SRC} ${GEN_PINS_HDR}
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${MICROPY_GENHDR_DIR}
+    COMMAND ${Python3_EXECUTABLE} ${MAKE_PINS} --board ${BOARD_PINS} --af ${MCU_AF_FILE} --prefix ${PREFIX_FILE} --hdr ${GEN_PINS_HDR} > ${GEN_PINS_SRC}
+    DEPENDS ${BOARD_PINS} ${MCU_AF_FILE} ${PREFIX_FILE}
+)
+
+
