Add Muselab Nanoesp32_s2 w/Wrover

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -473,7 +473,8 @@ jobs:
         - "franzininho_wifi_wrover"
         - "lilygo_ttgo_t8_s2_st7789"
         - "microdev_micro_s2"
-        - "muselab_nanoesp32_s2"
+        - "muselab_nanoesp32_s2_wroom"
+        - "muselab_nanoesp32_s2_wrover"
         - "targett_module_clip_wroom"
         - "targett_module_clip_wrover"
         - "unexpectedmaker_feathers2"
