--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -136,11 +136,13 @@ SRC_C = \
 	board_init.c \
 	$(BOARD_DIR)/flash_config.c \
 	machine_adc.c \
+	$(BOARD_DIR)/lpdev_iomux.c \
 	machine_led.c \
 	machine_pin.c \
 	machine_rtc.c \
 	machine_timer.c \
 	mimxrt_flash.c \
+	machine_uart.c \
 	modutime.c \
 	modmachine.c \
 	modmimxrt.c \
@@ -264,6 +266,7 @@ SRC_QSTR += \
 	machine_rtc.c \
 	machine_timer.c \
 	mimxrt_flash.c \
+	machine_uart.c \
 	modutime.c \
 	modmachine.c \
 	modmimxrt.c \
