--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,8 +154,24 @@ jobs:
       with:
         name: mpy-cross-macos-catalina
         path: mpy-cross/mpy-cross
+    - name: Select SDK for M1 build
+      run: sudo xcode-select -switch /Applications/Xcode_12.3.app
+    - name: Build mpy-cross (arm64)
+      run: make -C mpy-cross -j2 -f Makefile.m1 V=2
+    - uses: actions/upload-artifact@v2
+      with:
+        name: mpy-cross-macos-bigsur-arm64
+        path: mpy-cross/mpy-cross-arm64
+    - name: Make universal binary
+      run: lipo -create -output mpy-cross-macos-universal mpy-cross/mpy-cross mpy-cross/mpy-cross-arm64
+    - uses: actions/upload-artifact@v2
+      with:
+        name: mpy-cross-macos-universal
+        path: mpy-cross-macos-universal
     - name: Upload mpy-cross build to S3
       run: |
+        [ -z "$AWS_ACCESS_KEY_ID" ] || aws s3 cp mpy-cross-macos-universal s3://adafruit-circuit-python/bin/mpy-cross/mpy-cross-macos-universal-${{ env.CP_VERSION }} --no-progress --region us-east-1
+        [ -z "$AWS_ACCESS_KEY_ID" ] || aws s3 cp mpy-cross/mpy-cross-arm64 s3://adafruit-circuit-python/bin/mpy-cross/mpy-cross-macos-bigsur-${{ env.CP_VERSION }}-arm64 --no-progress --region us-east-1
         [ -z "$AWS_ACCESS_KEY_ID" ] || aws s3 cp mpy-cross/mpy-cross s3://adafruit-circuit-python/bin/mpy-cross/mpy-cross-macos-catalina-${{ env.CP_VERSION }} --no-progress --region us-east-1
       env:
         AWS_PAGER: ''
