esp32s2: Add "cam" files from esp-dev-kits@282a356
.. these files have been re-formatted by our code-formatting
scripts, so their content does NOT match upstream.

--- a/ports/esp32s2/Makefile
+++ b/ports/esp32s2/Makefile
@@ -176,6 +176,7 @@ CFLAGS += -DCFG_TUD_VENDOR_RX_BUFSIZE=128 -DCFG_TUD_VENDOR_TX_BUFSIZE=128
 
 SRC_C += \
 	background.c \
+	cam.c \
 	fatfs_port.c \
 	mphalport.c \
 	bindings/espidf/__init__.c \
