--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -308,6 +308,7 @@ jobs:
         - "pewpew_m4"
         - "picoplanet"
         - "pimoroni_keybow2040"
+        - "pimoroni_pga2040"
         - "pimoroni_picolipo_16mb"
         - "pimoroni_picolipo_4mb"
         - "pimoroni_picosystem"
