--- a/ports/nrf/Makefile
+++ b/ports/nrf/Makefile
@@ -173,6 +173,10 @@ SRC_LIB += $(addprefix lib/,\
         libm/roundf.c \
 	)
 
+SRC_LIB += $(addprefix modules/,\
+		math/nrf_math.c \
+	)
+
 endif
 
 ifeq ($(MCU_VARIANT), nrf91)
@@ -197,6 +201,10 @@ SRC_LIB += $(addprefix lib/,\
         libm/atanf.c \
         libm/atan2f.c \
         )
+
+SRC_LIB += $(addprefix modules/,\
+		math/nrf_math.c \
+	)
 
 SRC_NRFX += $(addprefix lib/nrfx/drivers/src/,\
         nrfx_uarte.c \
@@ -313,7 +321,6 @@ DRIVERS_SRC_C += $(addprefix modules/,\
 	music/modmusic.c \
 	music/musictunes.c \
 	ble/modble.c \
-	math/nrf_math.c \
 	)
 
 # Custom micropython startup file with smaller interrupt vector table
