--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -485,6 +485,7 @@ jobs:
         - "atmegazero_esp32s2"
         - "electroniccats_bastwifi"
         - "espressif_kaluga_1"
+        - "espressif_kaluga_1.3"
         - "espressif_saola_1_wroom"
         - "espressif_saola_1_wrover"
         - "franzininho_wifi_wroom"
