--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -116,10 +116,15 @@ SRC_HAL_IMX_C += \
 	$(MCU_DIR)/xip/fsl_flexspi_nor_boot.c \
 	$(MCU_DIR)/project_template/clock_config.c \
 	$(MCU_DIR)/drivers/fsl_adc.c \
+	$(MCU_DIR)/drivers/fsl_cache.c \
 	$(MCU_DIR)/drivers/fsl_clock.c \
+	$(MCU_DIR)/drivers/fsl_dmamux.c \
+	$(MCU_DIR)/drivers/fsl_edma.c \
 	$(MCU_DIR)/drivers/fsl_gpio.c \
 	$(MCU_DIR)/drivers/fsl_gpt.c \
 	$(MCU_DIR)/drivers/fsl_common.c \
+	$(MCU_DIR)/drivers/fsl_lpspi.c \
+	$(MCU_DIR)/drivers/fsl_lpspi_edma.c \
 	$(MCU_DIR)/drivers/fsl_lpuart.c \
 	$(MCU_DIR)/drivers/fsl_flexram.c \
 	$(MCU_DIR)/drivers/fsl_flexspi.c \
@@ -134,11 +139,13 @@ SRC_C = \
 	ticks.c \
 	tusb_port.c \
 	board_init.c \
+	dma_channel.c \
 	$(BOARD_DIR)/flash_config.c \
 	machine_adc.c \
 	machine_led.c \
 	machine_pin.c \
 	machine_rtc.c \
+	machine_spi.c \
 	machine_timer.c \
 	machine_uart.c \
 	mimxrt_flash.c \
@@ -265,6 +272,7 @@ SRC_QSTR += \
 	machine_led.c \
 	machine_pin.c \
 	machine_rtc.c \
+	machine_spi.c \
 	machine_timer.c \
 	machine_uart.c \
 	mimxrt_flash.c \
