mimxrt: Class machine.spi - add DMA channel management.
Just a simple one, based on a table of flags.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -148,6 +148,7 @@ SRC_C = \
 	machine_timer.c \
 	machine_uart.c \
 	machine_spi.c \
+	dma_channel.c \
 	mimxrt_flash.c \
 	modutime.c \
 	modmachine.c \
