mimxrt: Add HW machine.i2c to the module machine.
It uses non-blocking transfer of data. Advantage over SoftI2C:
- Higher data rate up to 1.54 MHZ.
- Full protocol support.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -126,6 +126,7 @@ SRC_HAL_IMX_C += \
 	$(MCU_DIR)/drivers/fsl_lpspi.c \
 	$(MCU_DIR)/drivers/fsl_lpspi_edma.c \
 	$(MCU_DIR)/drivers/fsl_lpuart.c \
+	$(MCU_DIR)/drivers/fsl_lpi2c.c \
 	$(MCU_DIR)/drivers/fsl_flexram.c \
 	$(MCU_DIR)/drivers/fsl_flexspi.c \
 	$(MCU_DIR)/drivers/fsl_pit.c \
@@ -148,6 +149,7 @@ SRC_C = \
 	machine_spi.c \
 	machine_timer.c \
 	machine_uart.c \
+	machine_i2c.c \
 	mimxrt_flash.c \
 	modutime.c \
 	modmachine.c \
