--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,6 @@ jobs:
       run: |
         gcc --version
         python3 --version
-    - name: Check For setup.py
-      id: need-pypi
-      run: |
-        echo ::set-output name=setup-py::$( find . -wholename './setup.py' )
     - name: New boards check
       run: python3 -u ci_new_boards_check.py
       working-directory: tools
@@ -59,7 +55,6 @@ jobs:
         name: stubs
         path: circuitpython-stubs*
     - name: Install pypi dependencies
-      if: contains(steps.need-pypi.outputs.setup-py, 'setup.py')
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
@@ -138,8 +133,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.pypi_password }}
       run: |
         echo "Uploading dev release to PyPi"
-        python setup.py sdist
-        twine upload dist/*
+        twine upload circuitpython-stubs/dist/*
 
   mpy-cross-mac:
     runs-on: macos-10.15
