--- a/.github/workflows/ports_unix.yml
+++ b/.github/workflows/ports_unix.yml
@@ -70,10 +70,12 @@ jobs:
         mkdir -p coverage
         lcov --rc lcov_branch_coverage=1 --directory ports/unix/build-coverage --capture --output-file coverage/lcov.info.all
         lcov --remove coverage/lcov.info.all '*/lib/*' '*/ports/unix/*' '*/utils/*' --output-file coverage/lcov.info
-    - name: Send to coveralls
-      uses: coverallsapp/github-action@master
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        files: coverage/lcov.info
+        fail_ci_if_error: true
+        verbose: true
     - name: Print failures
       if: failure()
       run: tests/run-tests.py --print-failures
