--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,49 +1,57 @@
-name: Bug report
-description: Report a bug in CircuitPython
+name: 🐞 Bug Report
+description: Create a bug report to help us improve
 labels:
   - bug
 body:
   - type: markdown
     attributes:
       value: >-
-        ## Bug Report
-        Thanks! for testing out CircuitPython. Now that you have got a
-        problem... you can file a bug report for it. 
-  - type: input
+        Thanks! for testing out CircuitPython. Now that you have encountered a
+        bug... you can file a report for it.
+  - type: textarea
     id: firmware
     attributes:
       label: CircuitPython version
       description: >-
         Include the version of CircuitPython you're running. You can see it in
-        the `boot_out.txt` file, as well as in the REPL.
-      placeholder: >-
-        Adafruit CircuitPython 6.2.0-beta.2 on 2021-03-01; Raspberry Pi Pico
-        with rp2040
+        the `boot_out.txt` file, as well as in the `REPL`.
+      placeholder: Adafruit CircuitPython 6.2.0 on 2021-03-01; Raspberry Pi Pico with rp2040
+      render: python
+    validations:
+      required: true
   - type: textarea
     id: code
     attributes:
       label: Code/REPL
-      placeholder: >-
-        import busio, bitbangio 
+      description: This is automatically rendered as Python, so no need for backticks.
+      placeholder: |
+        import busio, bitbangio
         i2c = bitbangio.I2C(board.GP1, board.GP0)
       render: python
+    validations:
+      required: true
   - type: textarea
     id: behavior
     attributes:
       label: Behavior
-      description: What happens when you run the code above? Include any error messages.
-      placeholder: >-
-        Traceback (most recent call last):   
+      description: What happens when you run the code above? Include error messages (if any).
+      placeholder: |
+        ```python
+        Traceback (most recent call last):
           File "<stdin>", line 1, in <module>
           TimeoutError: Clock stretch too long
+        ```
+        On-board led pulses red.
+    validations:
+      required: true
   - type: textarea
     id: description
     attributes:
       label: Description
       description: Optionally, describe the bug in more detail.
-      placeholder: >-
-        - Error while using i2c... 
-        - Only happens when... 
+      placeholder: |
+        - Error while using i2c...
+        - Only happens when...
         - might be related to #4291...
   - type: textarea
     id: more-info
@@ -52,3 +60,4 @@ body:
       description: >-
         Optionally, add any other information like hardware connection, scope
         output etc. If you have already done some debugging, mention it here.
+      placeholder: Removing [this](url) line resolves the issue.
