--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -43,7 +43,7 @@ MICROPY_VFS_FAT ?= 1
 # Include py core make definitions
 include $(TOP)/py/py.mk
 
-GIT_SUBMODULES = lib/tinyusb lib/nxp_driver
+GIT_SUBMODULES = lib/tinyusb lib/nxp_driver lib/lwip lib/mbedtls
 
 MCU_DIR = lib/nxp_driver/sdk/devices/$(MCU_SERIES)
 LD_FILES = boards/$(MCU_SERIES).ld boards/common.ld
@@ -79,7 +79,7 @@ INC += -I$(TOP)/lib/tinyusb/src
 
 CFLAGS_MCU = -mtune=cortex-m7 -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-d16
 CFLAGS += $(INC) -Wall -Werror -Wdouble-promotion -Wfloat-conversion -std=c99 -nostdlib -mthumb $(CFLAGS_MCU)
-CFLAGS += -DCPU_$(MCU_SERIES) -DCPU_$(MCU_VARIANT)
+CFLAGS += -DCPU_$(MCU_SERIES) -DCPU_$(MCU_VARIANT) -DBOARD_$(BOARD)
 CFLAGS += -DXIP_EXTERNAL_FLASH=1 \
 	-DXIP_BOOT_HEADER_ENABLE=1 \
 	-DFSL_SDK_ENABLE_DRIVER_CACHE_CONTROL=1 \
@@ -134,6 +134,51 @@ LDFLAGS += --gc-sections
 CFLAGS += -fdata-sections -ffunction-sections
 endif
 
+# All settings for EThernat support are controller by the value of MICROPY_PY_LWIP
+ifeq ($(MICROPY_PY_LWIP), 1)
+
+INC += -Ilwip_inc
+INC += -I$(TOP)/lib/lwip/src/include
+INC += -Ihal/phy
+
+SRC_MOD := $(filter-out %/mbedtls/library/error.c, $(SRC_MOD))
+
+SRC_ETH_C += \
+	modusocket.c \
+	modnetwork.c \
+	network_lan.c \
+	eth.c \
+	shared/netutils/netutils.c \
+	shared/netutils/trace.c \
+	shared/netutils/dhcpserver.c \
+	hal/phy/mdio/enet/fsl_enet_mdio.c \
+	extmod/modlwip.c \
+	mbedtls/mbedtls_port.c \
+	lib/mbedtls_errors/mp_mbedtls_errors.c \
+	extmod/moduwebsocket.c \
+	$(MCU_DIR)/drivers/fsl_enet.c \
+
+ifeq ($(ENET_PHY), KSZ8081)
+CFLAGS += -DFSL_FEATURE_PHYKSZ8081_USE_RMII50M_MODE=1
+SRC_ETH_C += \
+	hal/phy/device/phyksz8081/fsl_phyksz8081.c
+endif
+ifeq ($(ENET_PHY), DP82825)
+SRC_ETH_C += \
+	hal/phy/device/phydp83825/fsl_phydp83825.c
+endif
+
+SRC_QSTR += \
+	extmod/modlwip.c \
+	extmod/moduwebsocket.c \
+	modusocket.c \
+	modnetwork.c \
+	network_lan.c \
+
+CFLAGS += -DMBEDTLS_CONFIG_FILE='"mbedtls/mbedtls_config.h"'
+
+endif
+
 # TinyUSB Stack source
 SRC_TINYUSB_C += \
 	lib/tinyusb/src/class/cdc/cdc_device.c \
@@ -164,6 +209,7 @@ SRC_HAL_IMX_C += \
 	$(MCU_DIR)/drivers/fsl_lpspi.c \
 	$(MCU_DIR)/drivers/fsl_lpspi_edma.c \
 	$(MCU_DIR)/drivers/fsl_lpuart.c \
+	$(MCU_DIR)/drivers/fsl_ocotp.c \
 	$(MCU_DIR)/drivers/fsl_pit.c \
 	$(MCU_DIR)/drivers/fsl_snvs_lp.c \
 	$(MCU_DIR)/drivers/fsl_trng.c \
@@ -184,6 +230,7 @@ SRC_C += \
 	dma_channel.c \
 	drivers/bus/softspi.c \
 	extmod/modonewire.c \
+	extmod/uos_dupterm.c \
 	fatfs_port.c \
 	led.c \
 	machine_adc.c \
@@ -204,6 +251,7 @@ SRC_C += \
 	moduos.c \
 	modutime.c \
 	mphalport.c \
+	pendsv.c \
 	pin.c \
 	sdcard.c \
 	shared/libc/printf.c \
@@ -215,10 +263,13 @@ SRC_C += \
 	shared/runtime/stdout_helpers.c \
 	shared/runtime/sys_stdio_mphal.c \
 	shared/timeutils/timeutils.c \
+	systick.c \
 	ticks.c \
 	tusb_port.c \
 	$(SRC_TINYUSB_C) \
 	$(SRC_HAL_IMX_C) \
+	$(SRC_ETH_C) \
+
 
 ifeq ($(MICROPY_HW_FLASH_TYPE), qspi_nor)
 SRC_C += \
@@ -334,6 +385,7 @@ SRC_S += shared/runtime/gchelper_m3.s \
 # List of sources for qstr extraction
 SRC_QSTR += \
 	extmod/modonewire.c \
+	extmod/uos_dupterm.c \
 	machine_adc.c \
 	machine_led.c \
 	machine_pin.c \
