ports: Use common mp_hal_stdout_tx_strn_cooked instead of custom one.
To reduce code duplication.

Signed-off-by: Damien George <damien@micropython.org>

--- a/ports/esp8266/Makefile
+++ b/ports/esp8266/Makefile
@@ -145,6 +145,7 @@ LIB_SRC_C = $(addprefix lib/,\
 	timeutils/timeutils.c \
 	utils/pyexec.c \
 	utils/interrupt_char.c \
+	utils/stdout_helpers.c \
 	utils/sys_stdio_mphal.c \
 	)
 
