--- a/.github/workflows/unix_port.yml
+++ b/.github/workflows/unix_port.yml
@@ -2,9 +2,9 @@ name: Build lv_micropython unix port
 
 on:
   push:
-    branches: [ master, lvgl_javascript, dev-8.0 ]
+    branches: [ master, lvgl_javascript ]
   pull_request:
-    branches: [ master, lvgl_javascript, dev-8.0 ]
+    branches: [ master, lvgl_javascript ]
 
 jobs:
   build:
