--- a/.github/workflows/js-port-v8.yml
+++ b/.github/workflows/js-port-v8.yml
@@ -1,10 +1,10 @@
-name: Build Javascript port
+name: Build Javascript v8 port
 env:
   EM_VERSION: 2.0.4
   EM_CACHE_FOLDER: 'emsdk-cache'
 on:
   push:
-    branches: [ lvgl_javascript ]
+    branches: [ lvgl_javascript_v8 ]
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-          ref: 'lvgl_javascript'
+          ref: 'lvgl_javascript_v8'
+          fetch-depth: 0
       - name: Setup cache
         id: cache-system-libraries
         uses: actions/cache@v2
@@ -29,30 +30,33 @@ jobs:
       - name: Build SDL2
         run: embuilder build sdl2
       - name: Update submodules
-        run: git submodule update --init --recursive  
+        run: make -j $(nproc) -C ports/javascript submodules
       - name: Build mpy-cross
         run: make -j $(nproc) -C mpy-cross
-      - name: Build the javascript port
-        run: make -j $(nproc) -C ports/javascript
       - name: Install node modules
         run: npm install
         working-directory: ports/javascript
       - name: Build workers
         run: npm run clean
         working-directory: ports/javascript
+      - name: Build the javascript port
+        run: make -j $(nproc) -C ports/javascript
       - name: Build frontend
         run: npm run bundle
         working-directory: ports/javascript
       - name: Clean up unneeded files
         run: rm -rf build .cache node_modules
         working-directory: ports/javascript
+      - name: Retrieve version
+        run: |
+          echo "::set-output name=VERSION_NAME::$(lib/lv_bindings/lvgl/scripts/find_version.sh)"
+        id: version
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMIT_MESSAGE: ${{ env.GITHUB_SHA }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: ports/javascript # The folder the action should deploy.
-          CLEAN: true # Automatically remove deleted files from the deploy branch
-          PRESERVE: true
-          BASE_BRANCH: lvgl_javascript
+          token: ${{ secrets.LVGL_BOT_TOKEN }}
+          commit-message: ${{ env.GITHUB_SHA }}
+          branch: master
+          folder: ports/javascript/bundle_out
+          repository-name: lvgl/sim
+          target-folder: v${{ steps.version.outputs.VERSION_NAME }}/micropython/ports/javascript
