--- a/.github/workflows/merge-to-js.yml
+++ b/.github/workflows/merge-to-js.yml
@@ -22,11 +22,11 @@ jobs:
         uses: devmasx/merge-branch@v1.1.0
         with:
           type: now
-          target_branch: 'lvgl_javascript'
+          target_branch: 'lvgl_javascript_v8'
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Trigger Javascript port build
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: Build Javascript port
+          workflow: Build Javascript v8 port
           token: ${{ secrets.LVGL_BOT_TOKEN }}
