--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -303,6 +303,7 @@ jobs:
         - "metro_m4_express"
         - "metro_m7_1011"
         - "metro_nrf52840_express"
+        - "microbit_v2"
         - "mini_sam_m4"
         - "monster_m4sk"
         - "ndgarage_ndbit6"
