unix_port.yml: Faster submodule update
export XDG_RUNTIME_DIR to remove SDL warning

--- a/.github/workflows/unix_port.yml
+++ b/.github/workflows/unix_port.yml
@@ -19,11 +19,13 @@ jobs:
         sudo apt-get update -y -qq
         sudo apt-get install libsdl2-dev
     - name: Update submodules
-      run: git submodule update --init --recursive  
+      run: make -C ports/unix VARIANT=dev DEBUG=1 submodules
     - name: Build mpy-cross
       run: make -j $(nproc) -C mpy-cross
     - name: Build the unix port
       run: make -j $(nproc) -C ports/unix VARIANT=dev DEBUG=1
     - name: Run tests
-      run: lib/lv_bindings/tests/run.sh
+      run: |
+        export XDG_RUNTIME_DIR=/tmp
+        lib/lv_bindings/tests/run.sh
 
