--- a/ports/stm32/mboot/Makefile
+++ b/ports/stm32/mboot/Makefile
@@ -114,10 +114,10 @@ LIB_SRC_C += \
 	lib/littlefs/lfs2_util.c \
 	lib/oofatfs/ff.c \
 	lib/oofatfs/ffunicode.c \
-	extmod/uzlib/crc32.c \
-	extmod/uzlib/adler32.c \
-	extmod/uzlib/tinflate.c \
-	extmod/uzlib/tinfgzip.c
+	lib/uzlib/adler32.c \
+	lib/uzlib/crc32.c \
+	lib/uzlib/tinfgzip.c \
+	lib/uzlib/tinflate.c
 
 SRC_C += \
 	main.c \
