--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,8 +133,8 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.pypi_password }}
       run: |
         # setup.py sdist was run by 'make stubs'
-        if [ -z "$TWINE_USERNAME" ] || echo "Uploading dev release to PyPi"
-        if [ -z "$TWINE_USERNAME" ] || twine upload circuitpython-stubs/dist/*
+        [ -z "$TWINE_USERNAME" ] || echo "Uploading dev release to PyPi"
+        [ -z "$TWINE_USERNAME" ] || twine upload circuitpython-stubs/dist/*
 
   mpy-cross-mac:
     runs-on: macos-10.15
