--- a/.gitmodules
+++ b/.gitmodules
@@ -177,7 +177,7 @@
 	url = https://github.com/adafruit/Adafruit_CircuitPython_SimpleMath
 [submodule "ports/raspberrypi/sdk"]
 	path = ports/raspberrypi/sdk
-	url = https://github.com/adafruit/pico-sdk.git
+	url = https://github.com/raspberrypi/pico-sdk.git
 [submodule "data/nvm.toml"]
 	path = data/nvm.toml
 	url = https://github.com/adafruit/nvm.toml.git
