--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,7 +16,7 @@ cpp-coveralls
 Sphinx<4
 sphinx-rtd-theme
 myst-parser
-sphinx-autoapi
+sphinx-autoapi<=1.8.1
 sphinxcontrib-svg2pdfconverter
 readthedocs-sphinx-search
 
