add boards to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -277,6 +277,10 @@ jobs:
         - "fluff_m0"
         - "gemma_m0"
         - "grandcentral_m4_express"
+        - "gravitech_cucumber_m"
+        - "gravitech_cucumber_ms"
+        - "gravitech_cucumber_r"
+        - "gravitech_cucumber_rs"        
         - "hallowing_m0_express"
         - "hallowing_m4_express"
         - "hiibot_bluefi"
